# lemmy-chatgptjailbreak-backend

./: Cargo.toml  lemmy.hjson
crates/api/api_crud/: Cargo.toml
crates/api/api_crud/src/: lib.rs
crates/api/api_crud/src/badge/: assign.rs  create.rs  delete.rs  list.rs  mod.rs  remove.rs  update.rs
crates/api/routes/src/: lib.rs
crates/api/routes_v3/: Cargo.toml
crates/api/routes_v3/src/: badge_handlers.rs  lib.rs
crates/db_schema/migrations/2025-12-27-150032-0000_add_user_badges/: down.sql  up.sql
crates/db_schema/src/: newtypes.rs
crates/db_schema/src/impls/: badge.rs  mod.rs
crates/db_schema/src/source/: badge.rs  comment.rs  mod.rs  modlog.rs  post.rs
crates/db_schema_file/src/: schema.rs
crates/db_views/badge/: Cargo.toml
crates/db_views/badge/src/: api.rs  lib.rs
crates/db_views/person/src/: impls.rs  lib.rs
crates/diesel_utils/src/: pagination.rs
migrations/2025-12-26-232904_create_badge_system/: down.sql  up.sql
